--- a/views/client_form.twig
+++ b/views/client_form.twig
@@ -12,7 +12,7 @@
 
 		<form action='/add_client' method='post'>
 			<input id="stylist_id" name='stylist_id' value="{{ stylist.getId() }}" type='hidden'>
-			<label for="name">Enter the name of a new client :</label>
+			<label style="font-size: 17px" for="name">Enter the name of a new client :</label>
 			<input id='name' name='name' type='text'>
 
 			<button type='submit'>Add</button>
@@ -20,23 +20,23 @@
 
 		{% if clients is not empty %}
 
-			<h2>Here are all the clients listed for {{ stylist.getName }} :</h2>
+			<h3>Here are all the clients listed for {{ stylist.getName }} :</h3>
 				<ul>
 				{% for client in clients %}
 					<li>{{ client.getName }}</li>
-					   <form action="/stylist_form/{{ stylist.getId }}/deleteSingle" method="post">
+					   <form  style="float: left" action="/stylist_form/{{ stylist.getId }}/deleteSingle" method="post">
                            
                             <input value='{{ client.getId }}' name="client_id" id="client_id" type="hidden">
                             <input name="_method" type="hidden" value="delete">
                             <button type='submit' class="btn btn-danger">Delete</button>
                         </form>
                         
- 						<form action="/stylist_form/{{ stylist.getId }}/client/edit" method="post">
+ 						<form style="float: left, margin-bottom: 10px" action="/stylist_form/{{ stylist.getId }}/client/edit" method="post">
                            
                             <input value='{{ client.getId }}' name="client_id" id="client_id" type="hidden">
-                            <button type='submit' class="btn btn-warning">Edit</button>
+                            <button style='margin-left: 7px' type='submit' class="btn btn-warning">Edit</button>
                         </form>
-
+						<br>
                            
 
 				{% endfor %}
@@ -53,7 +53,7 @@
 	            <button type='submit' class="btn btn-danger">Delete them all</button>
 		</form>
 
-		 	<a href="/"><button type="submit" class="btn btn-info">Return</button></a>
+		 	<a href="/"><button style='margin-top: 10px' type="submit" class="btn btn-info">Return</button></a>
 
 	</div>
 
