--- a/views/edit_client.twig
+++ b/views/edit_client.twig
@@ -15,7 +15,7 @@
                 <label for="new_name">Rename your client</label>
                 <input id="new_name" name="new_name" type="text">
 
-                <button type="submit">Update</button>
+                <button type="submit" class="btn btn-warning">Update</button>
             </form>
 
         </div>
