--- a/views/stylist_form.twig
+++ b/views/stylist_form.twig
@@ -8,8 +8,10 @@
 	<div class='container'>
 		<h1>Welcome to the Hair Salon application</h1>
 
+		<p style="font-size: 12px; color: darkred"><em>(This is the version 2.0 of the assessment :D)</em></p>
+
 		<form action='/add_stylist' method='post'>
-			<label for='name'>Enter the stylist name</label>
+			<label style="font-size: 20px" for='name'>Enter the stylist name :</label>
 			<input id='name' name='name' type='text'>
 
 			<button type='submit' class='btn btn-success'>Add</button>
@@ -20,19 +22,19 @@
 		<ul>
 		{% for stylist in stylists %}
 			<li><a href='/stylist_form/{{stylist.getId()}}'>{{ stylist.getName }}</a></li>
-				   <form action="/stylist_form/{{ stylist.getId }}/deleteSingleStylist" method="post">
+				   <form style="float: left" action="/stylist_form/{{ stylist.getId }}/deleteSingleStylist" method="post">
                            
                         <input value='{{ stylist.getId }}' name="stylist_id" id="stylist_id" type="hidden">
                         <input name="_method" type="hidden" value="delete">
                         <button type='submit' class="btn btn-danger">Delete</button>
                     </form>
                         
- 					<form action="/stylist_form/{{ stylist.getId }}/edit" method="post">
+ 					<form style="float: left, margin-bottom: 10px" action="/stylist_form/{{ stylist.getId }}/edit" method="post">
                            
                         <input value='{{ stylist.getId }}' name="stylist_id" id="stylist_id" type="hidden">
-                        <button type='submit' class="btn btn-warning">Edit</button>
+                        <button style='margin-left: 7px' type='submit' class="btn btn-warning">Edit</button>
                     </form>
-
+                    <br>
 		{% endfor %}
 
 		{% else %}
@@ -42,7 +44,7 @@
 		{% endif %}
 
 		<form action='/delete_all_the_stylists' method='post'>
-			<button type='submit'>Delete them all</button>
+			<button type='submit' class="btn btn-danger">! Delete them all !</button>
 		</form>
 
 	</div>
